--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
@@ -14,6 +14,11 @@
     "@astrojs/mdx": "^3.1.7",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.2.0",
-    "astro": "^4.15.11"
+    "astro": "^4.15.11",
+    "tinacms": "^2.6.2"
+  },
+  "devDependencies": {
+    "@tinacms/cli": "^1.8.2",
+    "@types/node": "^22.13.1"
   }
 }
